# egrph

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  TASK.md  functions.md  refactor-instructions.md  rust-toolchain.toml
.github/workflows/: ci.yml  publish-wasm.yml
docs/: cypher-functions.md  cypher.md  load-csv.md
docs/examples/: access-log-correlation.md
egrph-c-abi/: .env  Cargo.toml
egrph-c-abi/src/: lib.rs
egrph-cli/: Cargo.toml
egrph-cli/src/: main.rs
egrph-core/: .env  Cargo.toml
egrph-core/benches/: core_perf.rs
egrph-core/examples/: performance_test.rs  sled_storage.rs
egrph-core/src/: cypher.pest  error.rs  lib.rs
egrph-core/src/ast/: mod.rs
egrph-core/src/executor/: aggregation.rs  expression.rs  mod.rs  result.rs
egrph-core/src/graph/: backend.rs  mod.rs  sled_storage.rs  storage.rs  types.rs
egrph-core/src/parser/: cypher.pest  mod.rs
egrph-core/src/planner/: mod.rs  plan.rs
egrph-go/: egrph.go  egrph_test.go  go.mod
egrph-python/: .env  Cargo.toml
egrph-python/src/: lib.rs
egrph-wasm/: Cargo.toml  package.json
egrph-wasm/demo/: index.html  package.json
egrph-wasm/src/: lib.rs
