[package]
name = "egrph-core"
version = "0.2.0"
edition = "2024"

[features]
default = []
sled-storage = ["dep:sled", "dep:bincode"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pest = "2.7"
pest_derive = "2.7"
thiserror = "2"
regex = "1"
sled = { version = "0.34", optional = true }
bincode = { version = "1.3", optional = true }

[dev-dependencies]
tempfile = "3"
