[package]
name = "egrph-core"
version = "0.4.0"
edition = "2024"

[features]
default = []
sled-storage = ["dep:sled", "dep:bincode"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
pest = "2.7"
pest_derive = "2.7"
regex = "1"
csv = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
sled = { version = "0.34", optional = true }
bincode = { version = "1.3", optional = true }

[dev-dependencies]
tempfile = "3"
