[package]
name = "egrph-python"
version = "0.3.1"
edition = "2024"

[lib]
name = "egrph_python"
crate-type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.24", features = ["abi3-py39"] }
egrph-core = { path = "../egrph-core" }
serde_json = "1.0"
