[package]
name = "egrph-wasm"
version = "0.1.0"
edition = "2024"
description = "WebAssembly bindings for the egrph graph database"
license = "MIT"
repository = "https://github.com/kjmkznr/egrph"

[lib]
crate-type = ["cdylib"]

[dependencies]
egrph-core = { path = "../egrph-core" }
wasm-bindgen = "~0.2.114"
serde_json = "1.0"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
